--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Website!</h1>
+        <h1>Welcome to Our Website! New</h1>
     </header>
     
     <section class="content">
